# crosslayer-coding

./: .gitignore  1_generate_activations.sh  2_train_clt.sh  3_train_clt_streaming.sh  4_eval.sh  LICENSE  OPTIMIZATION_PLAN.md  OPTIMIZATION_SUMMARY.md  README.md  benchmark_communication.py  clt_eval.py  debug_encode.py  diagnose_manifest.py  example_clt_config_gpt2_local.json  generate_test.sh  norm_stats.json  optimization_summary.md  pyproject.toml  pytest.ini  repl_eval.py  repl_eval_simple_forward.py  test_mask_optimization.py  test_optimized_batchtopk.py  test_optimized_training.py  train_clt.py  train_clt_local.py  train_clt_remote.py  tune_clt_local_ray.py  use_local_global_batchtopk.md
clt/: config.py
clt_server/: README.md  main.py  requirements.txt
notebooks/: extractor.ipynb  local_activation_store.ipynb
scripts/: benchmark_optimizations.py  compare_norm_stats.py  compress_activation_dataset.py  convert_batchtopk_to_jumprelu.py  debug_batchtopk_k_value.py  debug_batchtopk_shapes.py  debug_batchtopk_state.py  debug_check_nmse.py  debug_checkpoint_cycle.py  debug_checkpoint_planner.py  debug_distcp_comparison.py  debug_distributed_smoke_test.py  debug_eval_normalization.py  debug_full_weight_comparison.py  debug_inspect_distcp_files.py  debug_load_rank_checkpoints.py  debug_model_outputs.py  debug_save_load_mismatch.py  debug_save_load_simple.py  debug_save_load_tp.py  debug_tp_full_cycle.py  debug_train_clt.py  debug_training_vs_eval_metrics.py  debug_weight_comparison.py  debug_weight_comparison_simple.py  debug_weight_corruption.py  eval_tp_nmse.py  (+25 more)
(+141 files in other folders)
